<resources>
    <string name="app_name">DeKUT LMS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DeKUT LMS</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_cattle">Cattle</string>
    <string name="menu_milk">Milk</string>
    <string name="menu_health">Health</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_milk_records">Milk Records</string>
    <string name="menu_milk_orders">Milk Orders</string>
    <string name="menu_breeding">Breeding</string>
    <string name="cow_name">Cow Name</string>
    <string name="tag">Tag</string>
    <string name="purpose">Purpose</string>
    <string name="breed">Breed</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_feeding">Feeding</string>
    <string name="sync_data">Sync Data</string>
    <string name="text_money_in">Money In:</string>
    <string name="text_money_out">Money Out:</string>
    <string name="text_cow_name">Cow Name: </string>
    <string name="text_tag">Tag:</string>
    <string name="text_purpose">Purpose:</string>
    <string name="text_breed">Breed:</string>
    <string name="text_species">Species:</string>
    <string name="text_weight">Weight(kg)</string>
    <string name="text_age">Age:</string>
    <string name="text_gender">Gender:</string>
    <string name="text_status">Status:</string>
    <string name="text_save">Save</string>
    <string name="text_content_description">Cow Photo</string>
    <string name="text_print">PRINT</string>
    <string name="text_date">Date</string>
    <string name="text_afternoon">Afternoon</string>
    <string name="text_morning">Morning</string>
    <string name="text_evening">Evening</string>
    <string name="text_total">Total</string>
    <string name="text_button">Add Milk Record</string>
    <string name="text_months">months</string>
    <string name="text_kg">kg</string>
    <string name="text_finance_reports">FINANCE REPORTS</string>
    <string name="text_balance">Balance</string>
    <string name="text_milk_sales">MILK SALES</string>
    <string name="text_milk_sold">Milk Sold:</string>
    <string name="text_milk_produced">Milk Produced:</string>
    <string name="text_bulls_sold">Bulls Sold:</string>
    <string name="text_cows_sold">Cows/Heifers Sold:</string>
    <string name="text_calves_sold">Calves Sold:</string>
    <string name="text_animal_sales">ANIMAL SALES</string>
    <string name="text_amount_payable">Amount Payable</string>
    <string name="text_paid">Paid</string>
    <string name="text_litres">Litres</string>
    <string name="text_customer_name">Customer Name</string>
    <string name="text_add_milk_record">Add milk record</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="search_bar_hint">Ear Tag, Animal Name</string>
    <string name="text_pregnant">Pregnant</string>
    <string name="text_lactating">Lactating</string>
    <string name="text_total_animals">Total Animals</string>
    <string name="text_settings">Settings</string>
    <string name="text_work_details">Work Details</string>
    <string name="date_text_hint">12 JUL 24</string>
    <string name="text_hint_optional">Optional....</string>
    <string name="text_events">Events</string>
    <string name="text_assigned_to">Assigned to:</string>
    <string name="text_name">Name</string>
    <string name="text_complete">Complete</string>
    <string name="text_comments">Comments</string>
    <string name="text_daily_needs">Daily Needs</string>
    <string name="image_content_description">Cow Image</string>
    <string name="nav_icon">Navigation Icon</string>
    <string name="text_save_changes">Save Changes</string>
    <string name="text_note">Notes</string>
    <string name="text_nutritional_information">Nutritional Information</string>
    <string name="text_select_animal">Select Animal</string>
    <string name="text_feed_name">Feed Name</string>
    <string name="text_create_feed_formula">Feed Formula</string>
    <string name="text_quantity">Quantity</string>
    <string name="text_ingredients">Ingredients (Name, Quantity, Unit)</string>
    <string name="text_add">+ Add</string>
    <string name="text_remove">- Remove</string>
    <string name="text_type_of_record">Type of record</string>
    <string name="text_parent_flock">Parent Flock</string>
    <string name="text_disease_type">Disease type</string>
    <string name="text_dosage">Dosage</string>
    <string name="text_medication">Medication</string>
    <string name="text_record_date">Record Date</string>
    <string name="text_select_date">Select Date</string>
    <string name="hint_content">Write something worth remembering</string>
    <string name="text_save_and_exit">Save and Exit</string>
</resources>