<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <activity
        android:id="@+id/nav_main"
        android:name="com.example.livestockmanagement.MainActivity"
        android:label="@string/menu_home"
        tools:layout="@layout/activity_main" />

    <activity
        android:id="@+id/nav_cattle"
        android:name="com.example.livestockmanagement.ui.cattle.CowListActivity"
        android:label="@string/menu_cattle"
        tools:layout="@layout/activity_cow_list" />

    <activity
        android:id="@+id/nav_milk"
        android:name="com.example.livestockmanagement.ui.milk.MilkRecordsActivity"
        android:label="@string/menu_milk_records"
        tools:layout="@layout/fragment_milk" />

    <activity
        android:id="@+id/nav_health"
        android:name="com.example.livestockmanagement.ui.health.HealthRecordsActivity"
        android:label="@string/menu_health"
        tools:layout="@layout/activity_health_records" />

    <activity
        android:id="@+id/nav_feeding"
        android:name="com.example.livestockmanagement.ui.feeding.FeedingActivity"
        android:label="@string/menu_feeding"
        tools:layout="@layout/activity_feeding"/>
    <activity
        android:id="@+id/nav_breeding"
        android:name="com.example.livestockmanagement.ui.breeding.BreedingActivity"
        android:label="@string/menu_breeding"
        tools:layout="@layout/activity_breeding"/>
    <activity
        android:id="@+id/nav_reports"
        android:name="com.example.livestockmanagement.ui.reports.FinanceReportsActivity"
        android:label="@string/menu_reports"
        tools:layout="@layout/activity_finance_reports"/>
    <activity
        android:id="@+id/nav_tasks"
        android:name="com.example.livestockmanagement.ui.tasks.TasksActivity"
        android:label="@string/menu_tasks"
        tools:layout="@layout/activity_tasks"/>
</navigation>
