<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <ImageView
        android:layout_width="360dp"
        android:layout_height="219dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/text_content_description" />

    <TextView
        android:id="@+id/cow_name"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:text="@string/text_cow_name"/>

    <TextView
        android:id="@+id/tag"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:text="@string/text_tag"
        />


    <TextView
        android:id="@+id/text_species"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:text="@string/text_species"/>

    <TextView
        android:id="@+id/text_gender"
        android:layout_width="245dp"
        android:layout_height="wrap_content"

        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:text="@string/text_gender"/>

    <TextView
        android:id="@+id/text_breed"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:text="@string/text_breed"/>

    <TextView
        android:id="@+id/text_age"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:text="@string/text_age"/>

    <TextView
        android:id="@+id/text_purpose"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:text="@string/text_purpose"/>

    <TextView
        android:id="@+id/text_status"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:text="@string/text_status"/>

    <TextView
        android:id="@+id/text_weight"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:text="@string/text_weight"/>

    <androidx.cardview.widget.CardView
        android:layout_width="264dp"
        android:layout_height="63dp"
        app:cardCornerRadius="@dimen/app_corner_radius"
        app:cardElevation="@dimen/card_elevation">

        <TextView
            android:id="@+id/text_health_records"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="15dp"
            android:padding="10dp"
            android:text="@string/menu_health" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="264dp"
        android:layout_height="63dp"
        app:cardCornerRadius="@dimen/app_corner_radius"
        app:cardElevation="@dimen/card_elevation" >
    <TextView
        android:id="@+id/text_milk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:padding="10dp"
        android:text="@string/menu_milk_records" />
    </androidx.cardview.widget.CardView>

</LinearLayout>