<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cattle"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_cattle"/>
        <item
            android:id="@+id/nav_milk"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_milk" />
        <item
            android:id="@+id/nav_health"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_health" />
    </group>
</menu>