<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_cow_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cow_name" />

        <TextView
            android:id="@+id/tv_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag" />

        <TextView
            android:id="@+id/tv_breed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breed" />


        <TextView
            android:id="@+id/tv_purpose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purpose" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
