<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="218dp"
        android:layout_height="57dp"
        android:layout_margin="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="104dp"
        android:padding="15dp"
        android:text="@string/text_add_milk_record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="77dp"
        android:layout_height="33dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/text_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="401dp"
        android:layout_height="510dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:context=".AddMilkRecordActivity">

        <EditText
            android:id="@+id/dateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/text_date"
            android:inputType="date"
            android:padding="15dp" />

        <EditText
            android:id="@+id/morningEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/text_morning"
            android:inputType="numberDecimal"
            android:padding="15dp" />

        <EditText
            android:id="@+id/afternoonEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/text_afternoon"
            android:inputType="numberDecimal"
            android:padding="15dp" />

        <EditText
            android:id="@+id/eveningEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/text_evening"
            android:inputType="numberDecimal"
            android:padding="15dp" />

        <EditText
            android:id="@+id/totalEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/text_total"
            android:inputType="numberDecimal"
            android:padding="15dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
