<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/app_bar_main"
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:columnCount="2"

            android:rowCount="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"


            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.495">

            <!-- Card 1 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cattle_card_view"
                android:layout_width="@dimen/card_view_width"
                android:layout_height="@dimen/card_view_height"
                android:layout_margin="@dimen/layout_margin"
                android:paddingTop="@dimen/margin_top"
                app:cardCornerRadius="@dimen/app_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!--                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_cattle"
                                    android:tint="@android:color/black" />-->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/menu_cattle"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 2 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/milk_card_view"
                android:layout_width="@dimen/card_view_width"
                android:layout_height="@dimen/card_view_height"
                android:layout_margin="@dimen/layout_margin"
                android:paddingTop="@dimen/margin_top"
                app:cardCornerRadius="@dimen/app_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!--                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_milk_records"
                                    android:tint="@android:color/black" />-->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/menu_milk_records"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 3 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/health_card_view"
                android:layout_width="@dimen/card_view_width"
                android:layout_height="@dimen/card_view_height"
                android:layout_margin="@dimen/layout_margin"
                android:paddingTop="@dimen/margin_top"
                app:cardCornerRadius="@dimen/app_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!--                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_events"
                                    android:tint="@android:color/black" />-->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/menu_health"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 4 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/feeding_card_view"
                android:layout_width="@dimen/card_view_width"
                android:layout_height="@dimen/card_view_height"
                android:layout_margin="@dimen/layout_margin"
                android:paddingTop="@dimen/margin_top"
                app:cardCornerRadius="@dimen/app_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!--                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_transactions"
                                    android:tint="@android:color/black" />-->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/menu_feeding"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 5 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/reports_card_view"
                android:layout_width="@dimen/card_view_width"
                android:layout_height="@dimen/card_view_height"
                android:layout_margin="@dimen/layout_margin"
                android:paddingTop="@dimen/margin_top"
                app:cardCornerRadius="@dimen/app_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!--                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_farm_setup"
                                    android:tint="@android:color/black" />-->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/menu_tasks"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card 6 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/tasks_card_view"
                android:layout_width="@dimen/card_view_width"
                android:layout_height="@dimen/card_view_height"
                android:layout_margin="@dimen/layout_margin"
                android:paddingTop="@dimen/margin_top"
                app:cardCornerRadius="@dimen/app_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!--                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_reports"
                                    android:tint="@android:color/black" />-->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:text="@string/menu_reports"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>